--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-PG_URL=postgres://okanba:okanba@localhost/okanba
-PORT=3000
+PORT=1337
+DB_HOST=localhost
+DB_USERNAME=okanba
+DB_PASSWORD=okanba
+DB_DATABASE=okanba
