--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/O-clock-Ohm/oKanban-api-GaetanOclock#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "pg": "^8.9.0",
     "sequelize": "^6.28.0"
   }
