--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "okanban-api-gaetanoclock",
+  "name": "kanban-api",
   "version": "1.0.0",
   "description": "## JOUR 2",
   "main": "index.js",
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/O-clock-Ohm/oKanban-api-GaetanOclock.git"
+    "url": "git+https://github.com/EtiamSani/kanban-api/"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/O-clock-Ohm/oKanban-api-GaetanOclock/issues"
+    "url": "https://github.com/EtiamSani/kanban-api//issues"
   },
-  "homepage": "https://github.com/O-clock-Ohm/oKanban-api-GaetanOclock#readme",
+  "homepage": "https://github.com/EtiamSani/kanban-api/#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
